--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from utils.game import *\n",
+    "import numpy as np\n",
+    "import networkx as nx\n"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +19,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.15"
   },
   "orig_nbformat": 4,
