--- a/agent_evaluation.ipynb
+++ b/agent_evaluation.ipynb
@@ -130,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Louis\\anaconda3\\envs\\RL\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -677,25 +685,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Louis\\anaconda3\\envs\\RL\\lib\\site-packages\\torch\\nn\\functional.py:1956: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
-      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Win rate:  0.586\n",
-      "Defeat rate:  0.414\n",
+      "Win rate:  0.384\n",
+      "Defeat rate:  0.616\n",
       "Tie rate:  0.0\n",
-      "Avg nb of turns:  27.312\n"
+      "Avg nb of turns:  28.618\n"
      ]
     },
     {
@@ -703,7 +703,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\Louis\\Documents\\CentraleSupelec\\3A_RL\\Risk_RL\\utils\\viz.py:65: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
-      "  plt.figure(figsize=(6, 3))\n",
+      "  plt.figure(figsize=(10, 6))\n",
       "c:\\Users\\Louis\\Documents\\CentraleSupelec\\3A_RL\\Risk_RL\\utils\\viz.py:56: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  plt.figure()\n"
      ]
@@ -927,25 +927,41 @@
     "print(\"Win rate: \", win_rate)\n",
     "print(\"Defeat rate: \", defeat_rate)\n",
     "print(\"Tie rate: \", tie_rate)\n",
-    "print(\"Avg nb of turns: \", np.mean(nb_turns))\n",
-    "\n",
-    "# Save a game as a succession of images\n",
-    "game.reset_world()\n",
-    "game.run_and_save()\n",
-    "\n",
-    "# Generate a gif and save it\n",
-    "# generate_gif(\"./images/\", \"./gifs/\", fps=0.5)"
+    "print(\"Avg nb of turns: \", np.mean(nb_turns))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "learning_rate = 1e-3\n",
+    "deploy_hidden_size = 32\n",
+    "attack_hidden_size = 32\n",
+    "nb_territories = 11\n",
+    "nb_games = 100\n",
+    "reinforcement_param = 2\n",
+    "\n",
+    "load_path = f\"./models/PG_{nb_games}_games_{nb_territories}_territories/\"\n",
+    "\n",
+    "\n",
+    "# Call a new agent and set it to train mode\n",
+    "Agent = PolicyGradientAgent(learning_rate=learning_rate,\n",
+    "                            deploy_hidden_size=deploy_hidden_size,\n",
+    "                            attack_fortify_hidden_size=attack_hidden_size,\n",
+    "                            nb_territories=nb_territories)\n",
+    "Agent.load(load_path)\n",
+    "\n",
+    "# Evaluate the agent over some games\n",
+    "game = Game(map_graph=map_graph, presence_map=presence_map_start, nb_players=nb_player,\n",
+    "            countries=countries, layout=layout, label_options=label_options, colors=colors,\n",
+    "            reinforcement_param=reinforcement_param)\n",
+    "game.agents = [Agent, RandomAgent(), RandomAgent()]\n",
+    "\n",
     "# Save a game as a succession of images\n",
     "game.reset_world()\n",
-    "game.run_and_save()\n",
+    "game.run_and_save(max_turns=100)\n",
     "\n",
     "# Generate a gif and save it\n",
     "# generate_gif(\"./images/\", \"./gifs/\", fps=0.5)"
